--- a/packard.conf
+++ b/packard.conf
@@ -28,7 +28,7 @@ Feature=GreekParse
 About=Generated in accordance with the key included with CCAT and CATSS morphologically tagged works.\par First created by the CrossWire Bible Society in 2001. Use and distribute freely in any manner you wish, but please include this notice.
 
 # Module's revision.
-Version=1.4
+Version=2.7
 
 CompressType=ZIP
 
@@ -38,6 +38,7 @@ History_1.1=(2001-??-??) Changed font, fixed some typos, and set MinimumVersion 
 History_1.2=(2002-01-01) fixed Feature setting
 History_1.3=(2021-02-21) Rebuilt with hyphens instead of spaces in $$$ keys; reordered the lines in this .conf file
 History_1.4=(2021-02-23) Inserted a second hyphen in specified  to match more keys in module LXX
+History 2.7=(2021-03-02) Rebuild based on content of LXX module version 2.7
 
 # The minimum version of the SWORD library required for this module.
 MinimumVersion=1.5.3
