--- a/packard.conf
+++ b/packard.conf
@@ -25,7 +25,7 @@ Feature=GreekParse
 
 ## General informatic and installer elements
 # A lengthier description.
-About=Generated in accordance with the key included with CCAT and CATSS morphologically tagged works.\par First created by the CrossWire Bible Society in 2001. Use and distribute freely in any manner you wish, but please include this notice.
+About= Human readable grammar morph code used in the LXX module.
 
 # Module's revision.
 Version=2.7
