taking conf file from the beta repository

--- a/packard.conf
+++ b/packard.conf
@@ -5,7 +5,7 @@
 [Packard]
 
 # Short description of the module.
-Description=Packard's Morphological Analysis Codes
+Description=Packard’s Morphological Analysis Codes
 
 # Path to the module data files relative to the SWORD module library root directory.
 DataPath=./modules/lexdict/zld/packard/dict
@@ -15,22 +15,23 @@ ModDrv=zLD
 
 ## Required elements with defaults
 # Markup used in the module.
-SourceType=ThML
+SourceType=TEI
 
 # How the text in the conf and in the module are encoded.
 Encoding=UTF-8
+
+# Compression algorithm.
+CompressType=ZIP
 
 # Module features.
 Feature=GreekParse
 
 ## General informatic and installer elements
 # A lengthier description.
-About= Human readable grammar morph code used in the LXX module.
+About=Human readable grammar morph code used in the LXX module.
 
 # Module's revision.
-Version=2.7
-
-CompressType=ZIP
+Version=3.0
 
 # Indicates what has changed between different versions.
 History_1=(2001-??-??) First release
@@ -39,9 +40,10 @@ History_1.2=(2002-01-01) fixed Feature setting
 History_1.3=(2021-02-21) Rebuilt with hyphens instead of spaces in $$$ keys; reordered the lines in this .conf file
 History_1.4=(2021-02-23) Inserted a second hyphen in specified  to match more keys in module LXX
 History_2.7=(2021-03-02) Rebuild based on content of LXX module version 2.7
+History_3.0=(2022-08-23) Rebuild based on content of LXX module version 3.0
 
 # The minimum version of the SWORD library required for this module.
-MinimumVersion=1.5.3
+MinimumVersion=1.7.2
 
 # Library of Congress Subject Heading.
 LCSH=Bible--Language, style--Data processing.
