s/ߴ/'/ in conf file  again

--- a/packard.conf
+++ b/packard.conf
@@ -5,7 +5,7 @@
 [Packard]
 
 # Short description of the module.
-Description=Packard’s Morphological Analysis Codes
+Description=Packard's Morphological Analysis Codes
 
 # Path to the module data files relative to the SWORD module library root directory.
 DataPath=./modules/lexdict/zld/packard/dict
